fixed gaps for trends-cards for 1440px

--- a/sass/blocks/_trends.sass
+++ b/sass/blocks/_trends.sass
@@ -4,9 +4,9 @@
     display: grid
     flex-wrap: wrap
     grid-template-columns: repeat(4, 260px)
-    grid-gap: 33px
+    grid-column-gap: 33px
+    grid-row-gap: 50px
     grid-template-rows: repeat(2, 438px)
-
   &-info
     display: flex
     align-items: center
